force-app/main/default/objects/KimbleOne__GoodsReceivedNote__c/KimbleOne__GoodsReceivedNote__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Goods Received Note</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goods Received Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>