force-app/main/default/objects/KimbleOne__GoodsReceivedNote__c/fields/KimbleOne__ReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReceiptDate__c</fullName>
    <label>Receipt Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>