force-app/main/default/objects/KimbleOne__GoodsReceivedNote__c/fields/KimbleOne__ReceiptNotes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReceiptNotes__c</fullName>
    <label>Receipt Notes</label>
    <type>TextArea</type>
</CustomField>