force-app/main/default/objects/KimbleOne__GoodsReceivedNote__c/fields/KimbleOne__SupplierAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Goods Received Notes</relationshipLabel>
    <relationshipName>GoodsReceivedNotes</relationshipName>
    <type>Lookup</type>
</CustomField>