force-app/main/default/objects/KimbleOne__GoodsReceivedNote__c/fields/KimbleOne__SupplierPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierPurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Purchase Order</label>
    <referenceTo>KimbleOne__SupplierPurchaseOrder__c</referenceTo>
    <relationshipLabel>Goods Received Notes</relationshipLabel>
    <relationshipName>GoodsReceivedNotes</relationshipName>
    <type>Lookup</type>
</CustomField>