force-app/main/default/objects/KimbleOne__GoodsReceivedNote__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__SupplierAccount__c</columns>
    <columns>KimbleOne__SupplierPurchaseOrder__c</columns>
    <columns>KimbleOne__ReceiptDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>